<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">報表小工具</string>
    <string name="move_to_top">移致最上方</string>
    <string name="move_to_bottom">移致最下方</string>
    <string name="show_subtotal_only">只顯示月小結</string>
    <string name="title_section1">順序</string>
    <string name="title_section2">合數</string>
    <string name="title_section3">尾數</string>
    <string name="title_section4">加減</string>
    <string name="navigation_drawer_open">開啟</string>
    <string name="navigation_drawer_close">關閉</string>
    <string name="hk6">六合彩</string>
    <string name="lt539">今彩539</string>
    <string name="weli">威力彩</string>
    <string name="blot">大樂透</string>
    <string name="update_all">更新全部</string>
    <string name="update_recent">更新近期資料</string>
    <string name="hk6_update_status">六合彩更新進度</string>
    <string name="lt539_update_status">今彩539更新進度</string>
    <string name="weli_update_status">威力彩更新進度</string>
    <string name="blot_update_status">大樂透更新進度</string>
    <string name="update_progress">更新進度</string>
    <string name="update_done">更新完成</string>
    <string name="sub_total">總計</string>
    <string name="date">日期</string>
    <string name="compare_to_previous">向上比對</string>
    <string name="compare_to_next">向下比對</string>
    <string name="services_updating">正在更新中</string>
    <string name="settings">設定</string>
    <string name="settings_column_grid_bg">格線顏色</string>
    <string name="black">黑色</string>
    <string name="blue">藍色</string>
    <string name="grey">灰色</string>
    <string name="delete_complete_toast">已刪除資料期數:</string>
    <string name="delete_confirm_dialog_title">是否確定刪除資料</string>
    <string name="delete_confirm_dialog_message">不連續的刪除資料可能會導致更新失敗！</string>
    <string name="add_new_data">新增資料</string>
    <string name="allow_long_click_delete">允許長按刪除</string>
    <string name="display_lines">調整顯示筆數</string>
    <string name="display_all_data">所有筆數</string>
    <string name="delete_all_data">刪除所有資料</string>

    <!-- preference -->
    <string name="grid_color_dialog_title">格線顏色</string>
    <string name="grid_color_summary">格線的背景顏色</string>

    <string-array name="grid_color_entry">
        <item>@string/black</item>
        <item>@string/blue</item>
        <item>@string/grey</item>
    </string-array>
    <string-array name="grid_color_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="allow_long_click_delete_title">允許長按刪除</string>
    <string name="allow_long_click_delete_summary">長按資料可以刪除期數內容</string>
    <string name="settings_cat_appearence">外觀樣式</string>
    <string name="settings_cat_function">功能設定</string>
    <string name="settings_cat_reset">其他設定</string>
    <string name="settings_reset_title">重置資料</string>
    <string name="settings_reset_summary">當資料發生異常時可以點擊此選項，確認後將會刪除目前應用程式內所有資料並且重新下載新的資料。</string>
    <string name="settings_reset_dialog_summary">點擊確定後會清除所有期數資料並且重新下載所有資料，過程必須連上網際網路並且需要花費數分鐘完成。</string>
    <string name="settings_39_text_size_title">設定 39 字體大小</string>
    <string name="settings_49_text_size_title">設定 49 字體大小</string>
    <string name="settings_39_number_width_title">設定 39 欄位大小</string>
    <string name="settings_49_number_width_title">設定 49 欄位大小</string>

    <string-array name="settings_39_text_size_items">
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="settings_49_text_size_items">
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>
    <string-array name="settings_39_number_width_items">
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
    </string-array>
    <string-array name="settings_49_number_width_items">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>25</item>
        <item>27</item>
        <item>29</item>
    </string-array>

    <string name="current_text_size">目前字型大小</string>
    <string name="current_number_width">目前欄位大小</string>

</resources>