<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_cat_appearence" >
        <ListPreference
            android:dialogTitle="@string/grid_color_dialog_title"
            android:entries="@array/grid_color_entry"
            android:entryValues="@array/grid_color_value"
            android:key="grid_color"
            android:summary="@string/grid_color_summary"
            android:title="@string/grid_color_dialog_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_cat_function" >
        <CheckBoxPreference
            android:key="allow_long_click_delete"
            android:summary="@string/allow_long_click_delete_summary"
            android:title="@string/allow_long_click_delete_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_cat_reset" >
        <Preference
            android:key="reset_all"
            android:summary="@string/settings_reset_summary"
            android:title="@string/settings_reset_title" />
    </PreferenceCategory>

</PreferenceScreen>