<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bj4.yhh.projectx.MainActivity" >

    <item
        android:id="@+id/hk6"
        android:orderInCategory="100"
        android:showAsAction="withText|ifRoom"
        android:title="@string/hk6"/>
    <item
        android:id="@+id/lt539"
        android:orderInCategory="100"
        android:showAsAction="withText|ifRoom"
        android:title="@string/lt539"/>
    <item
        android:id="@+id/update_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/update_all"/>
    <item
        android:id="@+id/update_last"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/update_recent"/>
    <item
        android:id="@+id/add_new_data"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_new_data"/>
    <item
        android:id="@+id/display_lines"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/display_lines"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <!-- <item -->
    <!-- android:id="@+id/weli" -->
    <!-- android:orderInCategory="100" -->
    <!-- android:showAsAction="withText|ifRoom" -->
    <!-- android:title="@string/weli"/> -->

</menu>